Fixed project image to fit on smaller screens

--- a/src/components/ProjectsContent/ProjectsContent.module.css
+++ b/src/components/ProjectsContent/ProjectsContent.module.css
@@ -62,4 +62,9 @@ p {
     .card {
         width: 80%;
     }
+
+    .container img {
+        object-fit: cover;
+        height: auto;
+    }
 }
